Libre 2: Fix issues with widget block centre alignments.

--- a/libre-2/css/blocks.css
+++ b/libre-2/css/blocks.css
@@ -353,17 +353,14 @@ p.has-drop-cap:not(:focus)::first-letter {
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-/* Categories, Latest Posts & Archives */
+/* General Widget styles */
 
 .wp-block-categories.aligncenter,
 .wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
 .wp-block-latest-posts.aligncenter,
-.wp-block-archives.aligncenter {
+.wp-block-latest-comments.aligncenter {
 	list-style-position: inside;
-	margin-left: 0;
-	margin-right: 0;
-	padding-left: 0;
-	padding-right: 0;
 	text-align: center;
 }
 
